# nodestract

./: Cargo.toml  LICENSE  NextStep.md  README.md  SHOW.md  build.rs  data_source.txt  setup_env.ps1
bench/: sec.nso
docs/: AnalisiCritica.md  DocumentazioneTecnica.md  ManualeUso.md  SpecificheLinguaggio.md
examples/: array_test.hns  bank_demo.hns  data_test.hns  data_test.ns  en_basic_test.ns  en_test.ns  func_test.hns  hello.ns  hello_hawk.hns  it.ns  it_test.ns  logic_test.hns  logic_test.ns  main_test.ns  math_test.hns  math_test.ns  mixed_test.ns  net_test.ns  security_test.hns  security_test.ns  stress_test.hns  stress_test.ns  vault_test.hns
examples/test/: test.md  test.rs
examples/test/conditional/: 1_if_else.ns  2_if_else_if.ns  3_switch.ns  4_switch_default.ns  5_ternary.ns
examples/test/data/: 1_array.ns  2_range.ns  3_map.ns  4_coercion_add.ns  5_coercion_mul.ns  7_index_assign.ns
playground/: main.ns
playground/data/: daily_report.txt
playground/hawk_db/: auth.ns  cloud.ns  config.ns  core.ns  storage.ns  utils.ns
secure_data/: test.nso
src/: ast.rs  engine.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  value.rs  welcome.rs
src/ast/: ast.rs
src/filter/: filter.rs
src/import/: check.rs  import.json  import.rs
src/interpreter/: builtins.rs  expressions.rs  fs.rs  functions.rs  interpreter.rs  net.rs  ops.rs  statements.rs
src/lexer/: delimiters.json  lexer.rs  operators.json
src/parser/: expression.rs  parser.rs  statement.rs
src/translate/: translate.rs
vscode_ext/: icons.json  package.json
(+55 files in other folders)
