[package]
name = "ns"
version = "1.0.0"
edition = "2021"
authors = ["Christian Miglietta"]
description = "The official compiler for the NodeStract (.ns) language"

[dependencies]
fastrand = "2.1.0"
ureq = { version = "2.9.12", default-features = false, features = ["json", "native-tls"] }
serde_json = "1.0"


[[example]]
name = "lessons"
path = "examples/lessons/lessons.rs"
